# physics_lab

./: .gitignore  Cargo.toml  changelog.txt  physics_lab.code-workspace
src/: bound.rs  gui.rs  main.rs  mod.rs  my_images.rs  particle.rs  signal.rs  wall.rs
