[package]
name = "physics_lab"
version = "0.1.8"
edition = "2021"
authors = ["Artur Gwoździowski <gwozdyk@gmail.com>"]
description = "Physics based sandbox simulation in 2D with Bevy Game Engine, Rapier2D Physics Engine and Egui User Interface"

[dependencies]
bevy = "0.13.2"
bevy_egui = "0.27.1"
bevy_rapier2d = { version = "0.26.0", features = ["simd-stable"] }
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3
